<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab06</string>
    <string name="hello">Hello World, Lab06Activity!</string>
	<string name="filename">文件名</string>
	<string name="play">play</string>
	<string name="pause">pause</string>
	<string name="reset">reset</string>
	<string name="stop">stop</string>
	<string name="zhuangtai">Playing</string>
	<string name="time">00:00 / 00:00 </string>
	<string name="noexist">文件没发现</string>
	<string name="goon">继续</string>
	<string name="quit">quit</string>
	
</resources>